# FastAPI-Katharsis

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_01_02_0001-initial_create_users_table.py  2026_01_02_0002-minimize_user_model.py
src/: __init__.py
src/application/: __init__.py
src/application/dto/: __init__.py  math.py  token.py  user.py
src/application/interfaces/: __init__.py  password_hasher.py  token_service.py  user_repository.py
src/application/use_cases/: __init__.py  auth.py  math.py
src/domain/: __init__.py  exceptions.py  services.py
src/domain/models/: __init__.py  math_operations.py  user.py
src/infrastructure/: celery_app.py  config.py
src/infrastructure/db/: __init__.py  session.py
src/infrastructure/db/models/: __init__.py  base.py  user.py
src/infrastructure/db/repositories/: __init__.py  user.py
src/presentation/: main.py
src/presentation/api/dependencies/: __init__.py  auth.py
src/presentation/api/routers/: __init__.py  auth.py  math.py
src/presentation/api/schemas/: __init__.py  math.py  token.py  user.py
tests/: conftest.py  test_auth.py  test_health.py  test_math.py
